@@ -7,7 +7,7 @@ breadcrumbText: Install DLS on Windows
 needAutoGenerateSidebar: true
 ---
 
-# Install Dynamsoft Dynamsoft License Server on Windows Server
+# Install Dynamsoft License Server on Windows Server
 
 ## Example Environment
 
@@ -22,9 +22,40 @@ needAutoGenerateSidebar: true
 
 ### Run the installer
 
-Download the installer from
+Download the installer from [Dynamsoft-Licensing-Tracking-Server](https://tst.dynamsoft.com/public/download/dls/2.2.19/dynamsoft_dls-win_x64-v2.2.19.zip) and unzip it to a proper location. In our case, it's unzipped to **"E:\dynamsoft_dls-win_x64-v2.2.19"**.
 
-[Dynamsoft-Licensing-Tracking-Server](https://tst.dynamsoft.com/public/download/lts/2.2/Dynamsoft-Licensing-Tracking-Server.exe)
+There are two ways to get the server running:
+
+#### Run DLS as an application 
+
+This can be done simply by executing the batch file **"startup.bat"**
+
+#### Run DLS as a service
+
+This can be done with the help of the tool [NSSM](https://nssm.cc/). The following steps show how it works.
+
+* Download [NSSM](https://nssm.cc/ci/nssm-2.24-101-g897c7ad.zip) and unzip, in our case, it's unzipped to **"E:\nssm-2.24"**
+* Open cmd, navigate to the directory **"E:\nssm-2.24\win64"** and run the following command
+
+```cmd
+nssm install dynamsoft-dls
+```
+
+* A GUI will open, fill the parameters for the application like this (change the values according to where you put the files)
+
+  + **Path**: `E:\dynamsoft_dls-win_x64-v2.2.19\win\bin\dynamsoftdlsx.exe`
+  + **Startup directory**: `E:\dynamsoft_dls-win_x64-v2.2.19`
+  + **Arguments**: `".\win\jre\bin\dynamsoftdls" --add-opens java.base/jdk.internal.loader=ALL-UNNAMED -jar ".\dls-2.2.19.jar" --server.port=48080 --data.port=50201`
+
+![nssm-001]({{site.assets}}imgs/nssm-001.png)
+
+* Switch to the last tab "Hooks" and choose "Application exit" as the Event and specify the parameter as 
+
+  + **Command**: `E:\dynamsoft_dls-win_x64-v2.2.19\shutdown.bat`
+
+![nssm-002]({{site.assets}}imgs/nssm-002.png)
+
+* Press the button "Install Service" and you should be able to find dynamsoft-dls as one of the services in the services GUI or in **Task Manager -> Service**. If it is not started, start it.
 
 ### Test the server
 
@@ -36,6 +67,6 @@ Upon the first visit, you will be asked to set an admin password. After that, yo
 
 > This UUID is require when [activating your licenses]({{site.selfhosting}}index.html#activate-the-license).
 
-![DLS-HomePage-001]({{site.assets}}imgs/lts-homepage.png)
+![DLS-HomePage-001]({{site.assets}}imgs/dls-homepage.png)
 
 If the above page shows up, then the server is installed correctly and is ready to process requests. However, the requests may not be able to reach it because it only listens on a local IP / Port. Therefore, the next step is to configure the network environment - reverse proxy - for it with the help of `IIS` . Read more on [Configure Reverse Proxy Using IIS]({{site.selfhosting}}configurereverseproxyusingiis.html).
